// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render item with children 1`] = `
<div
  class="item"
>
  Name
  <span
    aria-label="su-times"
    class="su-times clickable icon"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`Should render item without icon in disabled state 1`] = `
<div
  class="item disabled"
>
  Name
</div>
`;
